# holmgard-demo

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
plugin/: Plugins.h  TestPlugin.cpp  TestPlugin.h
res/.luadef/: config.json  plugin.lua
res/.luadef/definitions/: globals.lua  renderer.lua  universe.lua
res/demo/: entrypoint.lua
res/demo/system/: system.toml
res/demo/system/planet/: planet.toml  surface.lua
